# food-fortress

./: .gitignore  Cargo.toml  README.md
json/: fridge.json
run/: launch_bat.vbs  run.bat
src/: main.rs
src/app/: backend.rs  frontend.rs  log.rs  mod.rs
